# combo_skill_test

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
combo_data_transformation/: .prettierignore  .prettierrc  .sqlfluff  .sqlfluffignore  datadictionary.yml  dbt_project.yml
combo_data_transformation/macros/: calculate_expected_location_revenue.sql  calculate_expected_location_revenue_properties.yml  calculate_location_monthly_price.sql  calculate_location_monthly_price_properties.yml  generate_schema_name_properties.yml  normalize_date.sql  normalize_date_properties.yml
combo_data_transformation/models/: stg_bigquery__properties.yml  stg_bigquery_properties.yml
combo_data_transformation/models/mart/: _mart_properties.yml  mart__billing_metrics.sql  mart__billing_metrics_properties.yml  mart__orphan_contracts_properties.yml  mart__weekly_revenue.sql  mart__weekly_revenue_properties.yml
combo_data_transformation/models/mart/data_quality/: mart__duplicate_contratcs.sql  mart__duplicate_contratcs_properties.yml  mart__orphan_contracts.sql
combo_data_transformation/models/sources/: bigquery.yml
combo_data_transformation/models/staging/bigquery/: stg_bigquery__accounts.sql  stg_bigquery__accounts_properties.yml  stg_bigquery__locations.sql  stg_bigquery__locations_properties.yml  stg_bigquery__memberships.sql  stg_bigquery__memberships_properties.yml  stg_bigquery__rests.sql  stg_bigquery__rests_properties.yml  (+5 more)
combo_data_transformation/snapshots/: snapshot__locations.yml
combo_skill_test/: .gitignore
data_transformation/: dbt_project.yml
