[project]
name = "combo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.1",
]

[dependency-groups]
dev = [
    "dbt-datadict>=0.4.0",
    "pre-commit>=4.2.0",
    "sqlfluff-templater-dbt>=4.1.0",
]
